# Endless-Tunnel

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md
runtime/: CMakeLists.txt  CMakeUserPresets.json
runtime/Runtime-static/: Components.hpp  GameManagingLayer.cpp  GameManagingLayer.hpp  Renderer.cpp  Renderer.hpp  main.cpp
runtime/Scripts-shared/: include.hpp  source.cpp
runtime/env_android/: build.gradle  settings.gradle
runtime/env_android/app-src/: AndroidManifest.xml  build.gradle
runtime/env_android/app-src/java/: MainActivity.kt
runtime/env_android/gradle/wrapper/: gradle-wrapper.properties
~scripts/: run.ps1
